// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders snapshot 1`] = `
<div>
  <span
    class="makeStyles-badge-1 makeStyles-gray-8"
  />
</div>
`;

exports[`Badge renders snapshot with colour info 1`] = `
<div>
  <span
    class="makeStyles-badge-9 makeStyles-info-14"
  />
</div>
`;
